[gd_scene load_steps=17 format=3 uid="uid://tnmauhs4oxc6"]

[ext_resource type="Script" path="res://enemies/enemy_types/octo/octo.gd" id="1_ms26n"]
[ext_resource type="Texture2D" uid="uid://dw06lw2g4tkdq" path="res://enemies/enemy_types/enemy_assets/enemy_sprite_one.aseprite" id="2_j7soo"]
[ext_resource type="Script" path="res://enemies/modules/enemy_health/enemy_health.gd" id="2_kkp7y"]
[ext_resource type="PackedScene" uid="uid://cayf47pm8vmxd" path="res://enemies/modules/spike/spike.tscn" id="3_6r727"]
[ext_resource type="PackedScene" uid="uid://kfo6qktvvv65" path="res://world_loader/interactables/drops/heart/heart.tscn" id="3_ps614"]
[ext_resource type="Script" path="res://enemies/enemy_types/octo/octo_movement.gd" id="4_u40ge"]
[ext_resource type="PackedScene" uid="uid://dlmrxk1ghikip" path="res://world_loader/interactables/drops/simple_drop/simple_drop.tscn" id="6_h151m"]
[ext_resource type="PackedScene" uid="uid://gj5r6lcm7gm7" path="res://enemies/enemy_types/octo/boulder/rock_launcher.tscn" id="9_atg68"]

[sub_resource type="AtlasTexture" id="AtlasTexture_487ci"]
atlas = ExtResource("2_j7soo")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7lfo4"]
atlas = ExtResource("2_j7soo")
region = Rect2(16, 48, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_17rsw"]
animations = [{
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_487ci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7lfo4")
}],
"loop": true,
"name": &"walk",
"speed": 7.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yg3l8"]
size = Vector2(12, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hawlc"]
size = Vector2(10, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o6bv4"]
size = Vector2(10, 3)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7a6ea"]
size = Vector2(4, 7)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ycfkd"]
size = Vector2(4, 7)

[node name="octo" type="Node2D" node_paths=PackedStringArray("movement")]
position = Vector2(7, 8)
script = ExtResource("1_ms26n")
movement = NodePath("move/movement")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0

[node name="octo_anim" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_17rsw")
animation = &"walk"
autoplay = "walk"
frame_progress = 0.452648

[node name="health and damage" type="Node2D" parent="."]

[node name="simple_drop" parent="health and damage" node_paths=PackedStringArray("pos_target") instance=ExtResource("6_h151m")]
drop_thing = ExtResource("3_ps614")
pos_target = NodePath("../..")

[node name="spike" parent="health and damage" instance=ExtResource("3_6r727")]
visible = false

[node name="CollisionShape2D" parent="health and damage/spike/Area2D" index="0"]
position = Vector2(0, -0.5)

[node name="health" type="Node2D" parent="health and damage" node_paths=PackedStringArray("die_node")]
script = ExtResource("2_kkp7y")
die_node = NodePath("../..")

[node name="hitbox" type="Area2D" parent="health and damage"]
collision_layer = 4
collision_mask = 256

[node name="octo_hitbox" type="CollisionShape2D" parent="health and damage/hitbox"]
shape = SubResource("RectangleShape2D_yg3l8")

[node name="hurt_timer" type="Timer" parent="health and damage"]
wait_time = 0.45
one_shot = true

[node name="move" type="Node2D" parent="."]
visible = false

[node name="movement" type="Node2D" parent="move" node_paths=PackedStringArray("enemy_node", "hurt_timer", "stun_timer", "move_timer", "wiggle_timer", "octo_anim", "top_area", "bottom_area", "left_area", "right_area", "bump_timer")]
script = ExtResource("4_u40ge")
enemy_node = NodePath("../..")
hurt_timer = NodePath("../hurt_timer")
kbvel = 2
stun_timer = NodePath("../stun_timer")
move_timer = NodePath("../move_timer")
wiggle_timer = NodePath("../../wiggle_timer")
octo_anim = NodePath("../../octo_anim")
top_area = NodePath("../wall_areas/top")
bottom_area = NodePath("../wall_areas/bottom")
left_area = NodePath("../wall_areas/left")
right_area = NodePath("../wall_areas/right")
bump_timer = NodePath("../wall_areas/bump_timer")

[node name="move_timer" type="Timer" parent="move"]
one_shot = true

[node name="wall_areas" type="Node2D" parent="move"]

[node name="top" type="Area2D" parent="move/wall_areas"]
position = Vector2(0, -5)
collision_layer = 0
collision_mask = 34

[node name="top_shape" type="CollisionShape2D" parent="move/wall_areas/top"]
position = Vector2(0, -2)
shape = SubResource("RectangleShape2D_hawlc")

[node name="bottom" type="Area2D" parent="move/wall_areas"]
position = Vector2(0, 8)
collision_layer = 0
collision_mask = 34

[node name="bottom_shape" type="CollisionShape2D" parent="move/wall_areas/bottom"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_o6bv4")

[node name="left" type="Area2D" parent="move/wall_areas"]
position = Vector2(-6, 0)
collision_layer = 0
collision_mask = 34

[node name="left_shape" type="CollisionShape2D" parent="move/wall_areas/left"]
position = Vector2(-1, -0.5)
shape = SubResource("RectangleShape2D_7a6ea")

[node name="right" type="Area2D" parent="move/wall_areas"]
position = Vector2(6, 0)
collision_layer = 0
collision_mask = 34

[node name="right_shape" type="CollisionShape2D" parent="move/wall_areas/right"]
position = Vector2(1, -0.5)
shape = SubResource("RectangleShape2D_ycfkd")

[node name="bump_timer" type="Timer" parent="move/wall_areas"]

[node name="stun_timer" type="Timer" parent="move"]
wait_time = 3.0
one_shot = true

[node name="hurt_timer" type="Timer" parent="move"]
one_shot = true

[node name="attacks" type="Node2D" parent="."]

[node name="rock_launcher" parent="attacks" node_paths=PackedStringArray("enemy_ref") instance=ExtResource("9_atg68")]
enemy_ref = NodePath("../..")

[node name="wiggle_timer" type="Timer" parent="."]
one_shot = true

[connection signal="death" from="health and damage/health" to="health and damage/simple_drop" method="_on_health_death"]
[connection signal="hurt" from="health and damage/health" to="move/movement" method="_on_health_hurt"]
[connection signal="area_entered" from="health and damage/hitbox" to="move/movement" method="_on_hitbox_area_entered"]
[connection signal="timeout" from="move/move_timer" to="move/movement" method="_on_move_timer_timeout"]
[connection signal="area_entered" from="move/wall_areas/top" to="move/movement" method="_on_top_area_entered"]
[connection signal="body_entered" from="move/wall_areas/top" to="move/movement" method="_on_top_body_entered"]
[connection signal="area_entered" from="move/wall_areas/bottom" to="move/movement" method="_on_bottom_area_entered"]
[connection signal="body_entered" from="move/wall_areas/bottom" to="move/movement" method="_on_bottom_body_entered"]
[connection signal="area_entered" from="move/wall_areas/left" to="move/movement" method="_on_left_area_entered"]
[connection signal="body_entered" from="move/wall_areas/left" to="move/movement" method="_on_left_body_entered"]
[connection signal="area_entered" from="move/wall_areas/right" to="move/movement" method="_on_right_area_entered"]
[connection signal="body_entered" from="move/wall_areas/right" to="move/movement" method="_on_right_body_entered"]
[connection signal="timeout" from="move/hurt_timer" to="move/movement" method="_on_hurt_timer_timeout"]
[connection signal="timeout" from="wiggle_timer" to="move/movement" method="_on_wiggle_timer_timeout"]

[editable path="health and damage/spike"]
